# lasco

./: .gitignore  README.md
.github/workflows/: build.yml
aaai26/table1_instances/: SL2.las  SL3.las  ST2.las  ST3.las  ST4.las  UL2.las  UL3.las  UT2.las  UT3.las  UT4.las
aaai26/table2_instances/: AF.las  AKA.las  BT.las  CWP.las  EMM.las  GLBA.las  HIPPA-1.las  HIPPA-2.las  IM.las  IMSI-1.las  IMSI-3.las  MR.las  NA.las  NE.las  RLF.las
code/: DisjunctiveEncoder.hs  Encoder.hs  EncoderUtilities.hs  ExpEncoder.hs  Graph.hs  Grounder.hs  InputParser.hs  Logic.hs  Main.hs  Normalizer.hs  Printer.hs  Solver.hs  lasco.cabal
code/Parser/: AbsGrammar.hs  ErrM.hs  LexGrammar.hs  LexGrammar.x  LexUtilities.hs  ParGrammar.hs  ParGrammar.info  ParGrammar.y  PrintGrammar.hs  ShallowLexGrammar.hs  ShallowLexGrammar.x  ShallowTestGrammar.hs  SkelGrammar.hs  TestGrammar.hs
code/Parser/Grammar/: DocGrammar.txt  grammar.cf
examples/: ex10_tuples.las  ex11_loop_formulas.las  ex12_ctx_examples.las  ex13_only_positive_ex.las  ex14_only_negative_ex.las  ex15_no_hypo.las  ex16_no_bg.las  ex17_no_ex.las  ex1_normal_rules.las  ex2_denials.las  ex3_ranges.las  ex4_comparison.las  ex4_comparison_unsat.las  ex5_arithmetic.las  ex6_variables.las  ex6_variables_arithmetic_comaprison.las  ex7_ground_card_constraint.las  ex7_ground_choice_rules.las  ex8_non_ground_card_constraint.las  ex9_guarded_elements_card_constraint.las
examples/automata/: automata.las  automata2.las  automata3.las  automata4.las
