cabal-version:       >=1.10
name:                lasco
version:             0.1.0.0
build-type:          Simple

executable lasco
  main-is:             Main.hs
  hs-source-dirs:      .
  build-depends:
    base >=4.7 && <5,
    optparse-applicative >=0.14,
    containers,
    text,
    process,
    mtl,
    array
  other-modules:
    DisjunctiveEncoder
    Encoder
    EncoderUtilities
    ExpEncoder
    Grounder
    Graph
    InputParser
    Logic
    Normalizer
    Parser.AbsGrammar
    Parser.LexGrammar
    Parser.LexUtilities
    Parser.ParGrammar
    Parser.PrintGrammar
    Parser.ShallowLexGrammar
    Printer
    Solver
  default-language:    Haskell2010
  default-extensions:  FlexibleContexts DeriveGeneric NamedFieldPuns
